[package]
name = "icc-profile"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "ICC Profile reader"
readme = "README.md"
authors = ["mith-mmk <47620686+mith-mmk@users.noreply.github.com>"]
repository = "https://github.com/mith-mmk/icc-profile"
keywords = ["ICCProfile"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bin-rs = {version = "0.0.7",features = ["util"]}